feat: add grid and flex

--- a/modulo-1/curriculo/index.html
+++ b/modulo-1/curriculo/index.html
@@ -5,64 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Curriculum Vitae - Lorem Ipsum Dolor Sit</title>
-<link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Babylonica&family=Poppins:wght@100;300;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fasthand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <img class="profile-picture" src="https://picsum.photos/200" alt="Foto de perfil">
-    <h1>Lorem Ipsum Dolor Sit</h1>
-    <section>
-      <p>
-        <span>Contacto:</span>
-        <span>+503 7777 8888</span>
-      </p>
-      <p>
-        <span>Email: </span>
-        <span>mail@mail.com</span>
-      </p>
-      <p>
-        <span>GitHub: </span>
-        <span>https://github.com/profile</span>
-      </p>
+    <section id="my-info">
+      <img
+        class="my-info__avatar"
+        src="https://picsum.photos/200"
+        alt="Foto de perfil"
+      />
+      <div class="my-info__contact">
+        <h1 class="my-info__name">Lorem Ipsum Dolor Sit</h1>
+        <p class="my-info__contact-info">
+          <span>Contacto:</span>
+          <span>+503 7777 8888</span>
+        </p>
+        <p class="my-info__contact-info">
+          <span>Email: </span>
+          <span>mail@mail.com</span>
+        </p>
+        <p class="my-info__contact-info">
+          <span>GitHub: </span>
+          <span>https://github.com/profile</span>
+        </p>
+      </div>
     </section>
-    <section>
+    <section id="my-grade">
       <h2>Estudios</h2>
-      <section>
-        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
-        <p>Lorem ipsum dolor sit amet</p>
-        <span>2018</span>
-      </section>
-      <section>
-        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
-        <p>Lorem ipsum dolor sit amet</p>
-        <span>2018</span>
-      </section>
-      <section>
-        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
-        <p>Lorem ipsum dolor sit amet</p>
-        <span>2018</span>
-      </section>
-      <section>
-        <h3>Bootcamps:</h3>
-        <ol type="a">
-          <li>Lorem, ipsum dolor.</li>
-          <li>Lorem ipsum dolor sit amet.</li>
-          <li>Lorem ipsum dolor sit.</li>
-        </ol>
-      </section>
-      <section>
-        <h3>Cursos:</h3>
-        <ol type="a">
-          <li>Lorem, ipsum dolor.</li>
-          <li>Lorem ipsum dolor sit amet.</li>
-          <li>Lorem, ipsum dolor.</li>
-          <li>Lorem, ipsum dolor.</li>
-          <li>Lorem ipsum dolor sit amet.</li>
-          <li>Lorem ipsum dolor sit amet.</li>
-          <li>Lorem, ipsum dolor.</li>
-          <li>Lorem ipsum dolor sit amet.</li>
-          <li>Lorem ipsum dolor sit.</li>
-        </ol>
-      </section>
+      <div class="my-grade__professional">
+        <section>
+          <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+          <p>Lorem ipsum dolor sit amet</p>
+          <span>2018</span>
+        </section>
+        <section>
+          <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+          <p>Lorem ipsum dolor sit amet</p>
+          <span>2018</span>
+        </section>
+        <section>
+          <h3>Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
+          <p>Lorem ipsum dolor sit amet</p>
+          <span>2018</span>
+        </section>
+      </div>
+      <div class="my-grade__others">
+        <section>
+          <h3>Bootcamps:</h3>
+          <ol type="a">
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit.</li>
+          </ol>
+        </section>
+        <section>
+          <h3>Cursos:</h3>
+          <ol type="a">
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem, ipsum dolor.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit.</li>
+          </ol>
+        </section>
+
+
+      </div>
+      
     </section>
     <section>
       <h2>Experiencia Laboral</h2>
@@ -70,19 +95,34 @@
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit!</h3>
         <h4>Lorem ipsum dolor sit.</h4>
         <h5>Abril 2021</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolor libero, quibusdam et quisquam itaque debitis dolorum. Quidem repellendus, qui tempore, exercitationem dolore sunt nihil neque dolor eum, nisi molestias?</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolor
+          libero, quibusdam et quisquam itaque debitis dolorum. Quidem
+          repellendus, qui tempore, exercitationem dolore sunt nihil neque dolor
+          eum, nisi molestias?
+        </p>
       </section>
       <section>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit!</h3>
         <h4>Lorem ipsum dolor sit.</h4>
         <h5>Abril 2021</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolor libero, quibusdam et quisquam itaque debitis dolorum. Quidem repellendus, qui tempore, exercitationem dolore sunt nihil neque dolor eum, nisi molestias?</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolor
+          libero, quibusdam et quisquam itaque debitis dolorum. Quidem
+          repellendus, qui tempore, exercitationem dolore sunt nihil neque dolor
+          eum, nisi molestias?
+        </p>
       </section>
       <section>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit!</h3>
         <h4>Lorem ipsum dolor sit.</h4>
         <h5>Abril 2021</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolor libero, quibusdam et quisquam itaque debitis dolorum. Quidem repellendus, qui tempore, exercitationem dolore sunt nihil neque dolor eum, nisi molestias?</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error dolor
+          libero, quibusdam et quisquam itaque debitis dolorum. Quidem
+          repellendus, qui tempore, exercitationem dolore sunt nihil neque dolor
+          eum, nisi molestias?
+        </p>
       </section>
     </section>
   </body>
