feat: get genres movies

--- a/modulo-3/0.-project/index.html
+++ b/modulo-3/0.-project/index.html
@@ -1,52 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Disney + | Inicio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
   </head>
   <body class="text-bg-dark">
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom-dark"  data-bs-theme="dark">
+    <nav
+      class="navbar navbar-expand-lg bg-dark border-bottom-dark"
+      data-bs-theme="dark"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="https://static-assets.bamgrid.com/product/disneyplus/images/logo.1a56f51c764022ee769c91d894d44326.svg" alt="Logo" height="24" class="d-inline-block align-text-top">
+          <img
+            src="https://static-assets.bamgrid.com/product/disneyplus/images/logo.1a56f51c764022ee769c91d894d44326.svg"
+            alt="Logo"
+            height="24"
+            class="d-inline-block align-text-top"
+          />
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-uppercase" aria-current="page" href="#">
+              <a
+                class="nav-link active text-uppercase"
+                aria-current="page"
+                href="#"
+              >
                 <i class="bi bi-house-door-fill mr-2"></i>
-                Inicio</a>
+                Inicio</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link text-uppercase" href="#">
                 <i class="bi bi-house-door-fill"></i>
-                Búsqueda</a>
+                Búsqueda</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link text-uppercase" href="#">
                 <i class="bi bi-house-door-fill"></i>
-                Mi lista</a>
+                Mi lista</a
+              >
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-uppercase" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bi bi-house-door-fill"></i>
+                Géneros
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link text-uppercase" href="#">
                 <i class="bi bi-house-door-fill"></i>
-                Originales</a>
+                Películas</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link text-uppercase" href="#">
                 <i class="bi bi-house-door-fill"></i>
-                Películas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-uppercase" href="#">
-                <i class="bi bi-house-door-fill"></i>
-                Series</a>
+                Series</a
+              >
             </li>
           </ul>
           <span class="navbar-text">
@@ -58,27 +97,85 @@
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2D6D529679312111A8C87DFBCF9A893EDE4A6309FB9400B4C84A7A175CAD24B5/scale?width=2880&aspectRatio=3.91&format=jpeg" class="d-block w-100 h-40" alt="...">
+          <img
+            src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/2D6D529679312111A8C87DFBCF9A893EDE4A6309FB9400B4C84A7A175CAD24B5/scale?width=2880&aspectRatio=3.91&format=jpeg"
+            class="d-block w-100 h-40"
+            alt="..."
+          />
         </div>
         <div class="carousel-item">
-          <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/3FC3733D7FDD8850E02FBD5EFEA4E22C0B7F09A3ED30DD763EBE7F3A0A7C2EE9/compose?width=2880&aspectRatio=3.91&format=jpeg&label=disneyplusoriginal_391_scrim" class="d-block w-100 h-40" alt="...">
+          <img
+            src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/3FC3733D7FDD8850E02FBD5EFEA4E22C0B7F09A3ED30DD763EBE7F3A0A7C2EE9/compose?width=2880&aspectRatio=3.91&format=jpeg&label=disneyplusoriginal_391_scrim"
+            class="d-block w-100 h-40"
+            alt="..."
+          />
         </div>
         <div class="carousel-item">
-          <img src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/1AB21E25154FE4CAEFC6FF77E37C8B5262003E7C3C438F4EDAA4ED62F36890E9/scale?width=2880&aspectRatio=3.91&format=jpeg" class="d-block w-100 h-40" alt="...">
+          <img
+            src="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/1AB21E25154FE4CAEFC6FF77E37C8B5262003E7C3C438F4EDAA4ED62F36890E9/scale?width=2880&aspectRatio=3.91&format=jpeg"
+            class="d-block w-100 h-40"
+            alt="..."
+          />
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    
+    <div class="container mt-2">
+      <div class="row">
+        <h4 class="mb-5">Más populares</h4>
+        <div class="col">
+          <a href="#" class="border p-4 rounded-3">Movie</a>
+          <h6>Nombre de la Películas</h6>
+        </div>
+        <div class="col">
+          <a href="#" class="border p-4 rounded-3">Movie</a>
+          <h6>Nombre de la Películas</h6>
+        </div>
+        <div class="col">
+          <a href="#" class="border p-4 rounded-3">Movie</a>
+          <h6>Nombre de la Películas</h6>
+        </div>
+        <div class="col">
+          <a href="#" class="border p-4 rounded-3">Movie</a>
+          <h6>Nombre de la Películas</h6>
+        </div>
+        <div class="col">
+          <a href="#" class="border p-4 rounded-3">Movie</a>
+          <h6>Nombre de la Películas</h6>
+        </div>
+        <div class="col">
+          <a href="#" class="border p-4 rounded-3">Movie</a>
+          <h6>Nombre de la Películas</h6>
+        </div>
+        <div class="col">
+          <a href="#" class="border p-4 rounded-3">Movie</a>
+          <h6>Nombre de la Películas</h6>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
