feat: render list genre

--- a/modulo-3/0.-project/index.html
+++ b/modulo-3/0.-project/index.html
@@ -69,10 +69,8 @@
                 <i class="bi bi-house-door-fill"></i>
                 Géneros
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <ul id="genres-list" class="dropdown-menu">
+               
               </ul>
             </li>
             <li class="nav-item">
