feat: get popular movies

--- a/modulo-3/0.-project/index.html
+++ b/modulo-3/0.-project/index.html
@@ -70,7 +70,6 @@
                 Géneros
               </a>
               <ul id="genres-list" class="dropdown-menu">
-               
               </ul>
             </li>
             <li class="nav-item">
@@ -137,36 +136,8 @@
     </div>
     
     <div class="container mt-2">
-      <div class="row">
-        <h4 class="mb-5">Más populares</h4>
-        <div class="col">
-          <a href="#" class="border p-4 rounded-3">Movie</a>
-          <h6>Nombre de la Películas</h6>
-        </div>
-        <div class="col">
-          <a href="#" class="border p-4 rounded-3">Movie</a>
-          <h6>Nombre de la Películas</h6>
-        </div>
-        <div class="col">
-          <a href="#" class="border p-4 rounded-3">Movie</a>
-          <h6>Nombre de la Películas</h6>
-        </div>
-        <div class="col">
-          <a href="#" class="border p-4 rounded-3">Movie</a>
-          <h6>Nombre de la Películas</h6>
-        </div>
-        <div class="col">
-          <a href="#" class="border p-4 rounded-3">Movie</a>
-          <h6>Nombre de la Películas</h6>
-        </div>
-        <div class="col">
-          <a href="#" class="border p-4 rounded-3">Movie</a>
-          <h6>Nombre de la Películas</h6>
-        </div>
-        <div class="col">
-          <a href="#" class="border p-4 rounded-3">Movie</a>
-          <h6>Nombre de la Películas</h6>
-        </div>
+      <h4 class="mb-5">Más populares</h4>
+      <div id="popular" class="row">
       </div>
     </div>
     <script
@@ -174,6 +145,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/genres.js"></script>
+    <script src="./js/populars.js"></script>
   </body>
 </html>
