--- a/modulo-3/0.-project/index.html
+++ b/modulo-3/0.-project/index.html
@@ -14,6 +14,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <style>
+      div>a{
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body class="text-bg-dark">
     <nav
