feat: creación de buscador

--- a/modulo-3/0.-project/index.html
+++ b/modulo-3/0.-project/index.html
@@ -90,6 +90,10 @@
               >
             </li>
           </ul>
+          <form id="search" class="d-flex pr-4" role="search">
+            <input name="movie" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
           <span class="navbar-text">
             <i class="bi bi-person-circle"></i>
           </span>
